# Todo-App

./: .gitignore  README.md  build-macos.py  db_manager.py  linux.spec  package.json  pnpm-lock.yaml  task.py  task_manager.py
backend/: index.py  pyproject.toml
backend/LV-Folder/: README.md  db_manager.py  task.py  task_manager.py
backend/database/: database.sql  db_manager.py  insert_testing_data_in_db.sh  insert_testing_tasks.py
backend/managers/: files_manager.py  images_manager.py  task_manager.py
backend/models/: task.py
backend/tests/managers/: files_test.py  images_test.py  task_test.py
backend/tests/test_files_and_images/: FilesEnum.py  deep_space.csv  stars.csv
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: index.ts
gui/: index.html
